# spdlog-easy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spdlog_easy.hpp
CMake/: findSPDLOG_EASY.cmake
include/: spdlog_easy.hpp
include/source_location/: compile_features.h  source_location.hpp
include/spdlog_easy/: spdlog_easy.hpp
src/: main.cpp
